Fix image problem on Firefox and IE

--- a/001/project_folder/src/client/styles/default.less
+++ b/001/project_folder/src/client/styles/default.less
@@ -486,6 +486,10 @@ button {
     }
     .img-row {
         #device-slide-library .img-row;
+        img {
+          max-width:1413px;
+          width:100%;
+        }
     }
   }
   /*S Pen*/
@@ -507,8 +511,14 @@ button {
         #device-slide-library .learn-more;
       }
     }
-    .img-row {
-        #device-slide-library .img-row;
+    .img-col {
+      img {
+        position:absolute;
+        bottom:0;
+        top:20px;
+        max-width:567px;
+        width:100%
+      }
     }
   }
   /*Display*/
